# quic-send

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release-gui.yml  release-ui.yml  release.yml  rust-release.yml  rust.yml  typos.yml
qs-cli/: Cargo.toml
qs-cli/src/: main.rs
qs-core/: Cargo.toml
qs-core/src/: common.rs  lib.rs  packets.rs  receive.rs  send.rs  utils.rs
qs-gui/: .prettierrc  bun.lockb  index.html  package.json  vite.config.ts  vite.config.ts.timestamp-1741102038254-f38275c0bf0ff.mjs
qs-gui/src/: App.css  App.tsx  events.ts  index.tsx  styles.css  utils.ts
qs-gui/src-tauri/: Cargo.toml  tauri.conf.json
qs-gui/src-tauri/capabilities/: default.json
qs-gui/src-tauri/icons/: icon.icns
qs-gui/src-tauri/src/: lib.rs  main.rs  utils.rs
qs-gui/src/Components/: FileTransferCard.tsx  FileUploadCard.tsx  FilesToSend.tsx  Loading.tsx  ReceiveCodeInput.tsx  WindowControls.tsx
qs-gui/src/Pages/: AcceptFiles.tsx  App.tsx  Connect.tsx  Main.tsx  Receive.tsx  Send.tsx  TransferFiles.tsx  UploadFiles.tsx  WaitForReceiver.tsx
qs-roundezvous/: Cargo.toml
qs-roundezvous/src/: main.rs
src/: client.rs  common.rs  main.rs  packets.rs  receiver.rs  sender.rs  server.rs  utils.rs
