[workspace]
members = [
    "qs-core",
    "qs-cli",
    "qs-roundezvous",
    "qs-gui/src-tauri"
]

resolver = "2"

[workspace.dependencies]
quinn = { version = "0.11.4", features = ["runtime-tokio"] }
rustls = { version = "0.23.12", default-features = false, features = ["ring"] }
rcgen = "0.13.1"
bincode = "=2.0.0-rc.3"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.63"
pretty_assertions = "1.4.0"
rand = "0.8.5"
clap = { version = "4.5.16", features = ["derive"] }
semver = "1.0.23"
serde = { version = "1.0.215", features = ["derive"] }

# https://v2.tauri.app/concept/size/
[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.