[package]
name = "qs-cli"
version = "0.3.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
quinn = { workspace = true }
clap = { workspace = true }
semver = { workspace = true }
qs-core = { path = "../qs-core" }
async-compression = { version = "0.4.12", features = ["tokio", "gzip"] }
indicatif = "0.17.8"
dialoguer = "0.11.0"
colored = "2.1.0"
color-eyre = "0.6.3"

[[bin]]
path = "src/main.rs"
name = "qs"
