[package]
name = "qs-cli"
version = "0.4.0"
description = "A quic based peer-to-peer file transfer tool"
authors = ["Maxomatic458"]
edition = "2021"
repository = "https://github.com/maxomatic458/quic-send"
readme = "../README.md"
license = "MIT"
keywords = ["quic", "file-transfer", "peer-to-peer"]

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
quinn = { workspace = true }
clap = { workspace = true }
semver = { workspace = true }
iroh = { workspace = true }
rand = { workspace = true }
qs-core = { workspace = true } # todo remove later
bincode = { workspace = true, features = ["serde"] }
hex = { workspace = true }

async-compression = { version = "0.4.12", features = ["tokio", "gzip"] }
indicatif = "0.17.8"
dialoguer = "0.11.0"
colored = "2.1.0"
color-eyre = "0.6.3"
local-ip-address = { workspace = true }

[[bin]]
path = "src/main.rs"
name = "qs"
