[package]
name = "qs-cli"
version = "0.4.1"
description = "A quic based peer-to-peer file transfer tool"
authors = ["Maxomatic458"]
edition = "2021"
repository = "https://github.com/maxomatic458/quic-send"
readme = "../README.md"
license = "MIT"
keywords = ["quic", "file-transfer", "peer-to-peer"]

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
quinn = { workspace = true }
semver = { workspace = true }
iroh = { workspace = true }
rand = { workspace = true }
bincode = { workspace = true, features = ["serde"] }
copypasta = { workspace = true }
base64 = { workspace = true }

clap = { version = "4.5.31", features = ["derive"] }
qs-core = "0.4.1"
async-compression = { version = "0.4.12", features = ["tokio", "gzip"] }
indicatif = "0.17.8"
dialoguer = "0.11.0"
colored = "3.0.0"
color-eyre = "0.6.3"

[[bin]]
path = "src/main.rs"
name = "qs"

