[package]
name = "qs-core"
version = "0.4.0"
edition = "2021"
authors = ["Maxomatic458"]
description = "quic send core library"
repository = "https://github.com/maxomatic458/quic-send"
readme = "../README.md"
license = "MIT"
keywords = ["quic", "file-transfer", "peer-to-peer"]

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
iroh = { workspace = true }
async-compression = { version = "0.4.12", features = ["tokio", "gzip"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
