[package]
name = "qs-roundezvous"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
quinn = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
qs-core = { path = "../qs-core" }
clap = { version = "4.5.16", features = ["derive"] }

[[bin]]
path = "src/main.rs"
name = "qs-server"