[package]
name = "qs-roundezvous"
version = "0.3.1"
edition = "2021"
authors = ["Maxomatic458"]

[dependencies]
tokio = { workspace = true }
quinn = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
qs-core = { workspace = true }
clap = { version = "4.5.16", features = ["derive"] }

[[bin]]
path = "src/main.rs"
name = "qs-server"