[package]
name = "qs-gui"
version = "0.2.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true } 
tauri = { version = "1.7.2", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
qs-core = { path = "../../qs-core" }
serde_json = "1"
lazy_static = "1.5.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
