[package]
name = "qs-gui"
version = "0.4.1"
description = "A quic based peer-to-peer file transfer tool"
authors = ["Maxomatic458"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qs_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
iroh = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }

tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qs-core = { path = "../../qs-core" }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
walkdir = "2"
lazy_static = "1"
